src/objects/Survey_Header__c.object
<CustomObject>
    <fields>
        <fullName>Instance__c</fullName>
        <label>Instance</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Survey Headers</relationshipLabel>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Id__c</fullName>
        <externalId>true</externalId>
        <label>Response Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Survey_Id__c</fullName>
        <label>Survey Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Pages_JSON__c</fullName>
        <label>Survey Pages JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Survey Headers</relationshipLabel>
        <relationshipName>Survey_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Patient__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>